--- a/era.cfg
+++ b/era.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth-multiplayer
 
 #define LADDER_ERA_VERSION
-"0.1.10"#enddef
+"0.1.11"#enddef
 
 #define LADDER_ERA_MINIMUM_COMPATIBLE_VERSION
 "0.1.3"#enddef
@@ -41,6 +41,7 @@ multiplayer_Bath_of_Glory,multiplayer_Blue_Water_Province,multiplayer_Castle_Hop
     {LE_SLOW_6MP_LEADERS}
     {LE_TRAIT_HARDY_EVENT}
     {LE_PRINT_VERSION {LADDER_ERA_VERSION}}
+    {LE_CHANGELOG_MENU_ITEM}
 [/era]
 
 #undef LADDER_ERA_VERSION
