--- a/units/dwarves/Thunderer.cfg
+++ b/units/dwarves/Thunderer.cfg
@@ -1,5 +1,55 @@
 #textdomain wesnoth-units
 [unit_type]
+    id=Dwarvish Thunderer Ladder_0_3
+    name=_"Dwarvish Thunderer" + _" (ladder)"
+    [base_unit]
+        id=Dwarvish Thunderer
+    [/base_unit]
+    advances_to=Dwarvish Thunderguard Ladder_0_3
+
+    cost=16
+    num_traits=3
+    ignore_race_traits=yes
+    {LE_TRAIT_HARDY_MUSTHAVE}
+    {TRAIT_STRONG}
+    {TRAIT_QUICK}
+    {TRAIT_INTELLIGENT}
+    {TRAIT_RESILIENT}
+
+    # Note: need to list all attacks for the proper work of base_unit merging
+    [attack]
+        name=dagger
+        description=_"dagger"
+        icon=attacks/dagger-human.png
+        type=blade
+        range=melee
+        damage=6
+        number=2
+    [/attack]
+    [attack]
+        name=thunderstick
+        description=_"thunderstick"
+        type=pierce
+        range=ranged
+        damage=18
+        number=1
+    [/attack]
+    [attack]
+        name=thunderstick
+        description=_"thunderstick"
+        type=pierce
+        range=ranged
+        damage=9
+        number=2
+    [/attack]
+
+    description=_"Ladder variation of the Dwarvish Thunderer that costs 16 gold; has three traits in total, hardy trait is mandatory, healthy trait is removed.
+
+" + _"When the men of Wesnoth first encountered the dwarves, they were mystified by the power of the Dwarvish Thunderers, who were able to hurl death from afar through the apparatus of these strange wands they carried into battle. The deafening noise of these ‘thundersticks’ is terrifying to behold, and is made more so by the secrecy which dwarves wrap about their workings."
+[/unit_type]
+
+# Previous versions which should be kept to not break old replays.
+[unit_type]
     id=Dwarvish Thunderer Ladder_0_2
     name=_"Dwarvish Thunderer" + _" (ladder)"
     [base_unit]
@@ -21,7 +71,6 @@
 " + _"When the men of Wesnoth first encountered the dwarves, they were mystified by the power of the Dwarvish Thunderers, who were able to hurl death from afar through the apparatus of these strange wands they carried into battle. The deafening noise of these ‘thundersticks’ is terrifying to behold, and is made more so by the secrecy which dwarves wrap about their workings."
 [/unit_type]
 
-# Previous version which should be kept to not break old replays.
 [unit_type]
     id=Dwarvish Thunderer Ladder_0_1
     name=_"Dwarvish Thunderer" + _" (ladder)"
