--- a/macros/changelog_menu_item.cfg
+++ b/macros/changelog_menu_item.cfg
@@ -7,6 +7,7 @@
             description= _"Ladder Era Changelog"
             [command]
                 [message]
+                    side_for=$side_number
                     speaker=narrator
                     image="ladder-icon.png"
                     message="{~add-ons/Ladder_Era/changelog.txt}"
