--- a/era.cfg
+++ b/era.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth-multiplayer
 
 #define LADDER_ERA_VERSION
-"0.1.16"#enddef
+"0.1.17"#enddef
 
 #define LADDER_ERA_MINIMUM_COMPATIBLE_VERSION
 "0.1.3"#enddef
@@ -18,34 +18,42 @@ multiplayer_Den_of_Onis_Ladder,multiplayer_Hamlets_Ladder,multiplayer_Silverhead
 #define LE_2v2_SCENARIO_IDS
 multiplayer_Bath_of_Glory,multiplayer_Blue_Water_Province,multiplayer_Castle_Hopping_Isle,multiplayer_Clash,multiplayer_Geothermal,multiplayer_4p_Hamlets,multiplayer_Isars_Cross,multiplayer_King_of_the_Hill,multiplayer_Loris_River,multiplayer_4p_Morituri,multiplayer_Paths_of_Daggers,multiplayer_Ruins_of_Terra-Dwelve,multiplayer_Siege_Castles,multiplayer_4p_Underworld,multiplayer_Xanthe_Chaos#enddef
 
-[era]
-    id=ladder_era
-    name=_"Ladder Era"
-    require_era=yes
-    addon_min_version={LADDER_ERA_MINIMUM_COMPATIBLE_VERSION}
-    description=_"Balanced version of the Default Era for competitive play. May be used only with approved maps. Needs play testing to verify the balance changes."
+#define LE_DEFINITION ID NAME ADDITIONAL_WML
+    [era]
+        id={ID}
+        name={NAME}
+        {LE_PRINT_VERSION {NAME} {LADDER_ERA_VERSION}}
+        {ADDITIONAL_WML}
 
-    # Only approved maps can be played with this era
-    allow_scenario={LE_MAP_PICKER_IDS},{LE_1v1_DEFAULT_SCENARIO_IDS},{LE_1v1_MODIFIED_SCENARIO_IDS},{LE_2v2_SCENARIO_IDS}
+        require_era=yes
+        addon_min_version={LADDER_ERA_MINIMUM_COMPATIBLE_VERSION}
+        description=_"Balanced version of the Default Era for competitive play. May be used only with approved maps. Needs play testing to verify the balance changes."
 
-    {RANDOM_SIDE}
-    {~add-ons/Ladder_Era/factions/drakes.cfg}
-    {~add-ons/Ladder_Era/factions/loyalists.cfg}
-    {~add-ons/Ladder_Era/factions/rebels.cfg}
-    {~add-ons/Ladder_Era/factions/northerners.cfg}
-    {~add-ons/Ladder_Era/factions/undead.cfg}
-    {~add-ons/Ladder_Era/factions/knalgans.cfg}
+        # Only approved maps can be played with this era
+        allow_scenario={LE_MAP_PICKER_IDS},{LE_1v1_DEFAULT_SCENARIO_IDS},{LE_1v1_MODIFIED_SCENARIO_IDS},{LE_2v2_SCENARIO_IDS}
 
-    {TURNS_OVER_ADVANTAGE}
-    {QUICK_4MP_LEADERS}
-    {LE_SLOW_6MP_LEADERS}
-    {LE_TRAIT_HARDY_EVENT}
-    {LE_PRINT_VERSION {LADDER_ERA_VERSION}}
-    {LE_CHANGELOG_MENU_ITEM}
-[/era]
+        {RANDOM_SIDE}
+        {~add-ons/Ladder_Era/factions/drakes.cfg}
+        {~add-ons/Ladder_Era/factions/loyalists.cfg}
+        {~add-ons/Ladder_Era/factions/rebels.cfg}
+        {~add-ons/Ladder_Era/factions/northerners.cfg}
+        {~add-ons/Ladder_Era/factions/undead.cfg}
+        # Knalgans faction is added in ADDITIONAL_WML parameter
+
+        {TURNS_OVER_ADVANTAGE}
+        {QUICK_4MP_LEADERS}
+        {LE_SLOW_6MP_LEADERS}
+        {LE_TRAIT_HARDY_EVENT}
+        {LE_CHANGELOG_MENU_ITEM}
+    [/era]
+#enddef
+
+{LE_DEFINITION ladder_era _"Ladder Era" {~add-ons/Ladder_Era/factions/knalgans.cfg}}
+{LE_DEFINITION ladder_test_era _"Ladder Test Era" {~add-ons/Ladder_Era/factions/knalgans_test.cfg}}
 
 #undef LADDER_ERA_VERSION
 #undef LE_MAP_PICKER_IDS
 #undef LE_1v1_DEFAULT_SCENARIO_IDS
 #undef LE_1v1_MODIFIED_SCENARIO_IDS
 #undef LE_2v2_SCENARIO_IDS
+#undef LE_DEFINITION
