--- a/macros/print_version.cfg
+++ b/macros/print_version.cfg
@@ -1,11 +1,11 @@
 
 # Prints the Ladder Era version in the chat are
 
-#define LE_PRINT_VERSION VERSION
+#define LE_PRINT_VERSION ERA VERSION
     [event]
         name=prestart
         [chat]
-            speaker="Ladder Era"
+            speaker={ERA}
             message="/me version " + {VERSION}
         [/chat]
     [/event]
