--- a/factions/northerners.cfg
+++ b/factions/northerners.cfg
@@ -5,7 +5,7 @@
     image="units/orcs/warrior.png"
     type=random
     leader=Orcish Warrior,Troll,Troll Rocklobber,Orcish Crossbowman,Orcish Slayer
-    recruit=Orcish Grunt,Troll Whelp,Wolf Rider,Orcish Archer Ladder_0_1,Orcish Assassin,Naga Fighter,Goblin Spearman
+    recruit=Orcish Grunt,Troll Whelp,Wolf Rider,Orcish Archer Ladder_1,Orcish Assassin,Naga Fighter,Goblin Spearman
     terrain_liked=Hh, Ha, Mm, Ss
     # wmllint: markcheck off
     # extra newline below to fit the wmllint noconvert directive, please don't change this
