--- a/factions/rebels.cfg
+++ b/factions/rebels.cfg
@@ -5,7 +5,7 @@
     image="units/elves-wood/captain.png"
     type=random
     leader=Elvish Captain,Elvish Hero,Elvish Ranger,Elvish Marksman,Elvish Druid
-    recruit=Elvish Fighter,Elvish Archer,Mage,Elvish Shaman Ladder_0_1,Elvish Scout,Wose Ladder_0_1,Merman Hunter Ladder_0_1
+    recruit=Elvish Fighter,Elvish Archer,Mage,Elvish Shaman Ladder_1,Elvish Scout,Wose,Merman Hunter Ladder_1
     terrain_liked=Ff, Fa, Ss, Ww
     # wmllint: markcheck off
     description="<img>src='portraits/elves/druid.png~BG()' align='middle'</img>
