--- a/units/drakes/Blademaster.cfg
+++ b/units/drakes/Blademaster.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Drake Blademaster Ladder_0_1
+    id=Drake Blademaster Ladder_1
     name=_"Drake Blademaster" + _" (ladder)"
     [base_unit]
         id=Drake Blademaster
