--- a/units/drakes/Fighter.cfg
+++ b/units/drakes/Fighter.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Drake Fighter Ladder_0_1
+    id=Drake Fighter Ladder_1
     name=_"Drake Fighter" + _" (ladder)"
     [base_unit]
         id=Drake Fighter
     [/base_unit]
-    advances_to=Drake Warrior Ladder_0_1
+    advances_to=Drake Warrior Ladder_1
 
     [defense]
         shallow_water=70
