--- a/units/drakes/Warrior.cfg
+++ b/units/drakes/Warrior.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Drake Warrior Ladder_0_1
+    id=Drake Warrior Ladder_1
     name=_"Drake Warrior" + _" (ladder)"
     [base_unit]
         id=Drake Warrior
     [/base_unit]
-    advances_to=Drake Blademaster Ladder_0_1
+    advances_to=Drake Blademaster Ladder_1
 
     [defense]
         shallow_water=70
