--- a/units/dwarves/Fighter.cfg
+++ b/units/dwarves/Fighter.cfg
@@ -1,33 +1,11 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Dwarvish Fighter Ladder_0_2
+    id=Dwarvish Fighter Ladder_1
     name=_"Dwarvish Fighter" + _" (ladder)"
     [base_unit]
         id=Dwarvish Fighter
     [/base_unit]
-    advances_to=Dwarvish Steelclad Ladder_0_2
-
-    num_traits=3
-    ignore_race_traits=yes
-    {LE_TRAIT_HARDY_MUSTHAVE}
-    {TRAIT_STRONG}
-    {TRAIT_QUICK}
-    {TRAIT_INTELLIGENT}
-    {TRAIT_RESILIENT}
-
-    description=_"Ladder variation of the Dwarvish Fighter that has three traits in total, hardy trait is mandatory, healthy trait is removed.
-
-" + _"Dwarvish Fighters wield mighty battle axes and hammers, which make them feared opponents in close-range combat. They are excellent in mountainous terrain or underground. Their power and endurance more than compensate for their relatively poor mobility."
-[/unit_type]
-
-# Previous version which should be kept to not break old replays.
-[unit_type]
-    id=Dwarvish Fighter Ladder_0_1
-    name=_"Dwarvish Fighter" + _" (ladder)"
-    [base_unit]
-        id=Dwarvish Fighter
-    [/base_unit]
-    advances_to=Dwarvish Steelclad Ladder_0_1
+    advances_to=Dwarvish Steelclad Ladder_1
 
     num_traits=3
     ignore_race_traits=yes
