--- a/units/dwarves/Guardsman.cfg
+++ b/units/dwarves/Guardsman.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Dwarvish Guardsman Ladder_0_2
+    id=Dwarvish Guardsman Ladder_1
     name=_"Dwarvish Guardsman" + _" (ladder)"
     [base_unit]
         id=Dwarvish Guardsman
     [/base_unit]
-    advances_to=Dwarvish Stalwart Ladder_0_1
+    advances_to=Dwarvish Stalwart Ladder_1
 
     num_traits=3
     ignore_race_traits=yes
@@ -36,28 +36,6 @@
     [/attack]
 
     description=_"Ladder variation of the Dwarvish Guardsman that has 6-1 ranged attack instead of 5-1; has three traits in total, hardy trait is mandatory, healthy trait is removed.
-
-" + _"The dwarven race has always been famed for its sturdiness of build, and many of their warriors outfit themselves to take advantage of this. Dwarven guardsmen march into battle with tower shields and spears. Most often, their role is to hold the line, and to take a heavy toll on those who try to break it. As the line marches forward, they act to secure its hard-won advance."+{SPECIAL_NOTES}+{SPECIAL_NOTES_STEADFAST}
-[/unit_type]
-
-# Previous version which should be kept to not break old replays.
-[unit_type]
-    id=Dwarvish Guardsman Ladder_0_1
-    name=_"Dwarvish Guardsman" + _" (ladder)"
-    [base_unit]
-        id=Dwarvish Guardsman
-    [/base_unit]
-    advances_to=Dwarvish Stalwart Ladder_0_1
-
-    num_traits=3
-    ignore_race_traits=yes
-    {LE_TRAIT_HARDY_MUSTHAVE}
-    {TRAIT_STRONG}
-    {TRAIT_QUICK}
-    {TRAIT_INTELLIGENT}
-    {TRAIT_RESILIENT}
-
-    description=_"Ladder variation of the Dwarvish Guardsman that has three traits in total, hardy trait is mandatory, healthy trait is removed.
 
 " + _"The dwarven race has always been famed for its sturdiness of build, and many of their warriors outfit themselves to take advantage of this. Dwarven guardsmen march into battle with tower shields and spears. Most often, their role is to hold the line, and to take a heavy toll on those who try to break it. As the line marches forward, they act to secure its hard-won advance."+{SPECIAL_NOTES}+{SPECIAL_NOTES_STEADFAST}
 [/unit_type]
