--- a/units/dwarves/Lord.cfg
+++ b/units/dwarves/Lord.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Dwarvish Lord Ladder_0_1
+    id=Dwarvish Lord Ladder_1
     name=_"Dwarvish Lord" + _" (ladder)"
     [base_unit]
         id=Dwarvish Lord
