--- a/units/dwarves/Sentinel.cfg
+++ b/units/dwarves/Sentinel.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Dwarvish Sentinel Ladder_0_1
+    id=Dwarvish Sentinel Ladder_1
     name=_"Dwarvish Sentinel" + _" (ladder)"
     [base_unit]
         id=Dwarvish Sentinel
