--- a/units/dwarves/Stalwart.cfg
+++ b/units/dwarves/Stalwart.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Dwarvish Stalwart Ladder_0_1
+    id=Dwarvish Stalwart Ladder_1
     name=_"Dwarvish Stalwart" + _" (ladder)"
     [base_unit]
         id=Dwarvish Stalwart
     [/base_unit]
-    advances_to=Dwarvish Sentinel Ladder_0_1
+    advances_to=Dwarvish Sentinel Ladder_1
 
     num_traits=3
     ignore_race_traits=yes
