--- a/units/dwarves/Ulfserker.cfg
+++ b/units/dwarves/Ulfserker.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Dwarvish Ulfserker Ladder_0_3
+    id=Dwarvish Ulfserker Ladder_1
     name=_"Dwarvish Ulfserker" + _" (ladder)"
     [base_unit]
         id=Dwarvish Ulfserker
     [/base_unit]
-    advances_to=Dwarvish Berserker Ladder_0_2
+    advances_to=Dwarvish Berserker Ladder_1
 
     cost=20
     num_traits=3
@@ -17,53 +17,6 @@
     {TRAIT_RESILIENT}
 
     description=_"Ladder variation of the Dwarvish Ulfserker that costs 20 gold; has three traits in total, hardy trait is mandatory, healthy trait is removed.
-
-" + _"Dwarves are an ancient race of powerful fighters. Ulfserkers are the most ferocious of these; in battle, they will work themselves into a blind rage wherein they feel neither fear nor pain, and will pay no heed to any wounds they receive."+{SPECIAL_NOTES}+{SPECIAL_NOTES_BERSERK}
-[/unit_type]
-
-# Previous versions which should be kept to not break old replays.
-[unit_type]
-    id=Dwarvish Ulfserker Ladder_0_2
-    name=_"Dwarvish Ulfserker" + _" (ladder)"
-    [base_unit]
-        id=Dwarvish Ulfserker
-    [/base_unit]
-    advances_to=Dwarvish Berserker Ladder_0_2
-
-    num_traits=3
-    ignore_race_traits=yes
-    {LE_TRAIT_HARDY_MUSTHAVE}
-    {TRAIT_STRONG}
-    {TRAIT_QUICK}
-    {TRAIT_INTELLIGENT}
-    {TRAIT_RESILIENT}
-
-    description=_"Ladder variation of the Dwarvish Ulfserker that has three traits in total, hardy trait is mandatory, healthy trait is removed.
-
-" + _"Dwarves are an ancient race of powerful fighters. Ulfserkers are the most ferocious of these; in battle, they will work themselves into a blind rage wherein they feel neither fear nor pain, and will pay no heed to any wounds they receive."+{SPECIAL_NOTES}+{SPECIAL_NOTES_BERSERK}
-[/unit_type]
-
-[unit_type]
-    id=Dwarvish Ulfserker Ladder_0_1
-    name=_"Dwarvish Ulfserker" + _" (ladder)"
-    [base_unit]
-        id=Dwarvish Ulfserker
-    [/base_unit]
-    advances_to=Dwarvish Berserker Ladder_0_1
-
-    num_traits=3
-    ignore_race_traits=yes
-    {LE_TRAIT_HARDY_MUSTHAVE}
-    {TRAIT_STRONG}
-    {TRAIT_QUICK}
-    {TRAIT_INTELLIGENT}
-    {TRAIT_RESILIENT}
-
-    [resistance]
-        arcane=120
-    [/resistance]
-
-    description=_"Ladder variation of the Dwarvish Ulfserker that has three traits in total, hardy trait is mandatory, healthy trait is removed. Arcane resistance -20% instead of +10%.
 
 " + _"Dwarves are an ancient race of powerful fighters. Ulfserkers are the most ferocious of these; in battle, they will work themselves into a blind rage wherein they feel neither fear nor pain, and will pay no heed to any wounds they receive."+{SPECIAL_NOTES}+{SPECIAL_NOTES_BERSERK}
 [/unit_type]
