--- a/units/elves/Shaman.cfg
+++ b/units/elves/Shaman.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Elvish Shaman Ladder_0_1
+    id=Elvish Shaman Ladder_1
     name=_"female^Elvish Shaman" + _" (ladder)"
     [base_unit]
         id=Elvish Shaman
