--- a/units/humans/Loyalist_Cavalryman.cfg
+++ b/units/humans/Loyalist_Cavalryman.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Cavalryman Ladder_0_2
+    id=Cavalryman Ladder_1
     name=_"Cavalryman" + _" (ladder)"
     [base_unit]
         id=Cavalryman
@@ -9,23 +9,6 @@
     cost=18
 
     description=_"Ladder variation of the Cavalryman that costs 18 gold.
-
-" + _"Cavalrymen are distinguished from horsemen by their tactics and equipment. A cavalryman wears heavier armor, and carries a sword and shield, rather than a lance. Their tactics do not include charging; instead they maneuver to slash with a sword, using both horse and rider as an effective tool of melee.
-
-Cavalrymen are very useful for taking and holding positions on open ground, for screening friendly soldiers, and also for scouting work."+{SPECIAL_NOTES}+{SPECIAL_NOTES_DEFENSE_CAP}
-[/unit_type]
-
-# Previous version which should be kept to not break old replays.
-[unit_type]
-    id=Cavalryman Ladder_0_1
-    name=_"Cavalryman" + _" (ladder)"
-    [base_unit]
-        id=Cavalryman
-    [/base_unit]
-
-    movement=7
-
-    description=_"Ladder variation of the Cavalryman that has 7 movement points instead of 8.
 
 " + _"Cavalrymen are distinguished from horsemen by their tactics and equipment. A cavalryman wears heavier armor, and carries a sword and shield, rather than a lance. Their tactics do not include charging; instead they maneuver to slash with a sword, using both horse and rider as an effective tool of melee.
 
