--- a/units/humans/Outlaw.cfg
+++ b/units/humans/Outlaw.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Outlaw Ladder_0_1
+    id=Outlaw Ladder_1
     name=_"Outlaw" + _" (ladder)"
     race=human
     gender=male,female
@@ -12,7 +12,7 @@
     level=2
     alignment=chaotic
     experience=77
-    advances_to=Fugitive Ladder_0_1
+    advances_to=Fugitive Ladder_1
     cost=28
     usage=mixed fighter
     description=_"Ladder variation of the Outlaw that has melee blade instead of impact.
