--- a/units/humans/Outlaw_Fugitive.cfg
+++ b/units/humans/Outlaw_Fugitive.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Fugitive Ladder_0_1
+    id=Fugitive Ladder_1
     name=_"Fugitive" + _" (ladder)"
     race=human
     gender=male,female
