--- a/units/humans/Woodsman_Poacher.cfg
+++ b/units/humans/Woodsman_Poacher.cfg
@@ -1,11 +1,10 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Poacher Ladder_0_1
+    id=Poacher Ladder_1
     name=_"Poacher" + _" (ladder)"
     [base_unit]
         id=Poacher
     [/base_unit]
-    advances_to=Trapper Ladder_0_1
 
     ignore_race_traits=yes
     {TRAIT_STRONG}
