--- a/units/merfolk/Hunter.cfg
+++ b/units/merfolk/Hunter.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Merman Hunter Ladder_0_1
+    id=Merman Hunter Ladder_1
     name=_"Merman Hunter" + _" (ladder)"
     [base_unit]
         id=Merman Hunter
     [/base_unit]
-    advances_to=Merman Spearman Ladder_0_1,Merman Netcaster Ladder_0_1
+    advances_to=Merman Spearman Ladder_1,Merman Netcaster Ladder_1
 
     hitpoints=32
     [defense]
