--- a/units/merfolk/Netcaster.cfg
+++ b/units/merfolk/Netcaster.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Merman Netcaster Ladder_0_1
+    id=Merman Netcaster Ladder_1
     name=_"Merman Netcaster" + _" (ladder)"
     [base_unit]
         id=Merman Netcaster
     [/base_unit]
-    advances_to=Merman Entangler Ladder_0_1
+    advances_to=Merman Entangler Ladder_1
 
     [defense]
       deep_water=40
