--- a/units/merfolk/Spearman.cfg
+++ b/units/merfolk/Spearman.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Merman Spearman Ladder_0_1
+    id=Merman Spearman Ladder_1
     name=_"Merman Spearman" + _" (ladder)"
     [base_unit]
         id=Merman Spearman
     [/base_unit]
-    advances_to=Merman Javelineer Ladder_0_1
+    advances_to=Merman Javelineer Ladder_1
 
     [defense]
       deep_water=40
