--- a/factions/loyalists.cfg
+++ b/factions/loyalists.cfg
@@ -5,7 +5,7 @@
     image="units/human-loyalists/lieutenant.png"
     type=random
     leader=Lieutenant,Swordsman,Javelineer,Longbowman
-    recruit=Cavalryman Ladder_0_2,Horseman,Spearman Ladder_0_1,Fencer,Heavy Infantryman,Bowman Ladder_0_1,Mage,Merman Fighter
+    recruit=Cavalryman Ladder_1,Horseman,Spearman Ladder_1,Fencer,Heavy Infantryman,Bowman Ladder_1,Mage,Merman Fighter
     terrain_liked=Gg, Ww, Wo
     # wmllint: markcheck off
     description="<img>src='portraits/humans/grand-knight.png~BG()' align='middle'</img>
