--- a/units/dwarves/Berserker.cfg
+++ b/units/dwarves/Berserker.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Dwarvish Berserker Ladder_0_2
+    id=Dwarvish Berserker Ladder_1
     name=_"Dwarvish Berserker" + _" (ladder)"
     [base_unit]
         id=Dwarvish Berserker
@@ -15,31 +15,6 @@
     {TRAIT_RESILIENT}
 
     description=_"Ladder variation of the Dwarvish Berserker that has three traits in total, hardy trait is mandatory, healthy trait is removed.
-
-" + _"Berserkers are a rare caste of Dwarves, who work themselves into a towering rage before combat. These warriors disdain all notion of defense, thinking only of the unrelenting assaults for which they are legendary."+{SPECIAL_NOTES}+{SPECIAL_NOTES_BERSERK}
-[/unit_type]
-
-# Previous version which should be kept to not break old replays.
-[unit_type]
-    id=Dwarvish Berserker Ladder_0_1
-    name=_"Dwarvish Berserker" + _" (ladder)"
-    [base_unit]
-        id=Dwarvish Berserker
-    [/base_unit]
-
-    num_traits=3
-    ignore_race_traits=yes
-    {LE_TRAIT_HARDY_MUSTHAVE}
-    {TRAIT_STRONG}
-    {TRAIT_QUICK}
-    {TRAIT_INTELLIGENT}
-    {TRAIT_RESILIENT}
-
-    [resistance]
-        arcane=120
-    [/resistance]
-
-    description=_"Ladder variation of the Dwarvish Berserker that has three traits in total, hardy trait is mandatory, healthy trait is removed. Arcane resistance -20% instead of +10%.
 
 " + _"Berserkers are a rare caste of Dwarves, who work themselves into a towering rage before combat. These warriors disdain all notion of defense, thinking only of the unrelenting assaults for which they are legendary."+{SPECIAL_NOTES}+{SPECIAL_NOTES_BERSERK}
 [/unit_type]
