--- a/units/dwarves/Dragonguard.cfg
+++ b/units/dwarves/Dragonguard.cfg
@@ -1,96 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Dwarvish Dragonguard Ladder_0_5
-    name=_"Dwarvish Dragonguard" + _" (ladder)"
-    [base_unit]
-        id=Dwarvish Dragonguard
-    [/base_unit]
-
-    num_traits=3
-    ignore_race_traits=yes
-    {LE_TRAIT_HARDY_MUSTHAVE}
-    {TRAIT_STRONG}
-    {TRAIT_QUICK}
-    {TRAIT_INTELLIGENT}
-    {TRAIT_RESILIENT}
-
-    # Note: need to list all attacks for the proper work of base_unit merging
-    [attack]
-        name=dagger
-        description=_"dagger"
-        icon=attacks/dagger-human.png
-        type=blade
-        range=melee
-        damage=9
-        number=3
-    [/attack]
-    [attack]
-        name=dragonstaff
-        description=_"dragonstaff"	# wmllint: no spellcheck (until name->id)
-        type=pierce
-        range=ranged
-        damage=20
-        number=2
-        icon=attacks/dragonstaff.png
-    [/attack]
-
-    description=_"Ladder variation of the Dwarvish Dragonguard with 20-2 ranged attack instead of 40-1; has three traits in total, hardy trait is mandatory, healthy trait is removed.
-
-" + _"It is not clear why the Dragonguards are called what they are, a name given by their dwarven brethren. Some speculate that the name comes from their weapon of choice, these strange staves that belch fire and death. Others have surmised that it is because such weapons would be a threat against even a true Dragon, should such a thing be seen again in the known world. Whatever the case, it is for these weapons that the guardians of the great Dwarven citadels are both renowned and feared; weapons that have broken the mightiest of warriors with a single blow."
-[/unit_type]
-
-# Previous versions which should be kept to not break old replays.
-[unit_type]
-    id=Dwarvish Dragonguard Ladder_0_3
-    name=_"Dwarvish Dragonguard" + _" (ladder)"
-    [base_unit]
-        id=Dwarvish Dragonguard
-    [/base_unit]
-
-    num_traits=3
-    ignore_race_traits=yes
-    {LE_TRAIT_HARDY_MUSTHAVE}
-    {TRAIT_STRONG}
-    {TRAIT_QUICK}
-    {TRAIT_INTELLIGENT}
-    {TRAIT_RESILIENT}
-
-    # Note: need to list all attacks for the proper work of base_unit merging
-    [attack]
-        name=dagger
-        description=_"dagger"
-        icon=attacks/dagger-human.png
-        type=blade
-        range=melee
-        damage=9
-        number=3
-    [/attack]
-    [attack]
-        name=dragonstaff
-        description=_"dragonstaff"	# wmllint: no spellcheck (until name->id)
-        type=pierce
-        range=ranged
-        damage=40
-        number=1
-        icon=attacks/dragonstaff.png
-    [/attack]
-    [attack]
-        name=dragonstaff
-        description=_"dragonstaff"	# wmllint: no spellcheck (until name->id)
-        type=pierce
-        range=ranged
-        damage=20
-        number=2
-        icon=attacks/dragonstaff.png
-    [/attack]
-
-    description=_"Ladder variation of the Dwarvish Dragonguard that has three traits in total, hardy trait is mandatory, healthy trait is removed.
-
-" + _"It is not clear why the Dragonguards are called what they are, a name given by their dwarven brethren. Some speculate that the name comes from their weapon of choice, these strange staves that belch fire and death. Others have surmised that it is because such weapons would be a threat against even a true Dragon, should such a thing be seen again in the known world. Whatever the case, it is for these weapons that the guardians of the great Dwarven citadels are both renowned and feared; weapons that have broken the mightiest of warriors with a single blow."
-[/unit_type]
-
-[unit_type]
-    id=Dwarvish Dragonguard Ladder_0_1
+    id=Dwarvish Dragonguard Ladder_1
     name=_"Dwarvish Dragonguard" + _" (ladder)"
     [base_unit]
         id=Dwarvish Dragonguard
