--- a/units/dwarves/Thunderguard.cfg
+++ b/units/dwarves/Thunderguard.cfg
@@ -1,103 +1,11 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Dwarvish Thunderguard Ladder_0_5
+    id=Dwarvish Thunderguard Ladder_1
     name=_"Dwarvish Thunderguard" + _" (ladder)"
     [base_unit]
         id=Dwarvish Thunderguard
     [/base_unit]
-    advances_to=Dwarvish Dragonguard Ladder_0_5
-
-    num_traits=3
-    ignore_race_traits=yes
-    {LE_TRAIT_HARDY_MUSTHAVE}
-    {TRAIT_STRONG}
-    {TRAIT_QUICK}
-    {TRAIT_INTELLIGENT}
-    {TRAIT_RESILIENT}
-
-    # Note: need to list all attacks for the proper work of base_unit merging
-    [attack]
-        name=dagger
-        description=_"dagger"
-        icon=attacks/dagger-human.png
-        type=blade
-        range=melee
-        damage=6
-        number=3
-    [/attack]
-    [attack]
-        name=thunderstick
-        description=_"thunderstick"
-        type=pierce
-        range=ranged
-        damage=14
-        number=2
-        icon=attacks/thunderstick.png
-    [/attack]
-
-    description=_"Ladder variation of the Dwarvish Thunderguard with 14-2 ranged attack instead of 28-1; has three traits in total, hardy trait is mandatory, healthy trait is removed.
-
-" + _"The Dwarven Thunderguards are famed for their curious weaponry, these strange staves of wood and iron that make a thunderous noise in their anger. The machinations behind this weaponry are a mystery, a secret taken to the grave by the dwarves of Knalga who wield them, and are assumed to have even forged them. The most that is known are reports of dwarves pouring a strange black dust into the mouth of their weapons, which some say is a food to fuel the beast imprisoned within."
-[/unit_type]
-
-# Previous versions which should be kept to not break old replays.
-[unit_type]
-    id=Dwarvish Thunderguard Ladder_0_3
-    name=_"Dwarvish Thunderguard" + _" (ladder)"
-    [base_unit]
-        id=Dwarvish Thunderguard
-    [/base_unit]
-    advances_to=Dwarvish Dragonguard Ladder_0_3
-
-    num_traits=3
-    ignore_race_traits=yes
-    {LE_TRAIT_HARDY_MUSTHAVE}
-    {TRAIT_STRONG}
-    {TRAIT_QUICK}
-    {TRAIT_INTELLIGENT}
-    {TRAIT_RESILIENT}
-
-    # Note: need to list all attacks for the proper work of base_unit merging
-    [attack]
-        name=dagger
-        description=_"dagger"
-        icon=attacks/dagger-human.png
-        type=blade
-        range=melee
-        damage=6
-        number=3
-    [/attack]
-    [attack]
-        name=thunderstick
-        description=_"thunderstick"
-        type=pierce
-        range=ranged
-        damage=28
-        number=1
-        icon=attacks/thunderstick.png
-    [/attack]
-    [attack]
-        name=thunderstick
-        description=_"thunderstick"
-        type=pierce
-        range=ranged
-        damage=14
-        number=2
-        icon=attacks/thunderstick.png
-    [/attack]
-
-    description=_"Ladder variation of the Dwarvish Thunderguard that has three traits in total, hardy trait is mandatory, healthy trait is removed.
-
-" + _"The Dwarven Thunderguards are famed for their curious weaponry, these strange staves of wood and iron that make a thunderous noise in their anger. The machinations behind this weaponry are a mystery, a secret taken to the grave by the dwarves of Knalga who wield them, and are assumed to have even forged them. The most that is known are reports of dwarves pouring a strange black dust into the mouth of their weapons, which some say is a food to fuel the beast imprisoned within."
-[/unit_type]
-
-[unit_type]
-    id=Dwarvish Thunderguard Ladder_0_1
-    name=_"Dwarvish Thunderguard" + _" (ladder)"
-    [base_unit]
-        id=Dwarvish Thunderguard
-    [/base_unit]
-    advances_to=Dwarvish Dragonguard Ladder_0_1
+    advances_to=Dwarvish Dragonguard Ladder_1
 
     num_traits=3
     ignore_race_traits=yes
