--- a/units/humans/Loyalist_Bowman.cfg
+++ b/units/humans/Loyalist_Bowman.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Bowman Ladder_0_1
+    id=Bowman Ladder_1
     name=_"Bowman" + _" (ladder)"
     [base_unit]
         id=Bowman
