--- a/units/humans/Loyalist_Spearman.cfg
+++ b/units/humans/Loyalist_Spearman.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Spearman Ladder_0_1
+    id=Spearman Ladder_1
     name=_"Spearman" + _" (ladder)"
     [base_unit]
         id=Spearman
