--- a/units/humans/Outlaw_Footpad.cfg
+++ b/units/humans/Outlaw_Footpad.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Footpad Ladder_0_2
+    id=Footpad Ladder_1
     name=_"Footpad" + _" (ladder)"
     # wmllint: general spelling footpads
     race=human
@@ -13,7 +13,7 @@
     experience=36
     level=1
     alignment=chaotic
-    advances_to=Outlaw Ladder_0_1
+    advances_to=Outlaw Ladder_1
     cost=14
     usage=scout
     description=_"Ladder variation of the Footpad that has melee blade 5-2 instead of impact 4-2.
@@ -126,139 +126,6 @@
         [idle_anim]
             [frame]
                 image="units/ladder-era/human-outlaws/footpad+female-idle-[1~4,3,2,3,4~1].png:[100*3,200,100*3,200,100*3]"
-            [/frame]
-        [/idle_anim]
-    [/female]
-[/unit_type]
-
-# Previous version which should be kept to not break old replays.
-[unit_type]
-    id=Footpad Ladder_0_1
-    name=_"Footpad" + _" (ladder)"
-    # wmllint: general spelling footpads
-    race=human
-    gender=male,female
-    image="units/human-outlaws/footpad.png"
-    profile="portraits/humans/footpad.png"
-    hitpoints=30
-    movement_type=elusivefoot
-    movement=7
-    experience=36
-    level=1
-    alignment=chaotic
-    advances_to=Outlaw Ladder_0_1
-    cost=14
-    usage=scout
-    description=_"Ladder variation of the Footpad that has melee blade 5-2 instead of impact 4-2.
-
-" + _"These petty criminals are often derisively called ‘footpads’ by their superiors, for they are tasked with any job that requires a great deal of running around, often being employed as couriers, or scouts. The endurance and agility they gain from this serves them well in combat, and despite their inferior weaponry they are quite good at harrying their enemies, especially under cover of darkness."
-    die_sound={SOUND_LIST:HUMAN_DIE}
-    {DEFENSE_ANIM "units/human-outlaws/footpad-defend.png" "units/human-outlaws/footpad.png" {SOUND_LIST:HUMAN_HIT} }
-    [attack]
-        name=axe
-        description=_"axe"
-        icon=attacks/axe.png
-        type=blade
-        range=melee
-        damage=5
-        number=2
-    [/attack]
-    [attack]
-        name=sling
-        description=_"sling"
-        type=impact
-        range=ranged
-        damage=5
-        number=2
-    [/attack]
-    [attack_anim]
-        [filter_attack]
-            name=sling
-        [/filter_attack]
-        offset=0.0
-        start_time=-400
-        [if]
-            hits=yes
-            {MISSILE_FRAME_STONE_HIT 5 -6}
-            [frame]
-                image="units/human-outlaws/footpad-attack1.png:250"
-                sound=sling.ogg
-            [/frame]
-        [/if]
-        [else]
-            hits=no
-            {MISSILE_FRAME_STONE_MISS 5 -6}
-            [frame]
-                image="units/human-outlaws/footpad-attack1.png:250"
-                sound=sling-miss.ogg
-            [/frame]
-        [/else]
-        [frame]
-            image="units/human-outlaws/footpad-attack2.png:200"
-        [/frame]
-    [/attack_anim]
-    [attack_anim]
-        [filter_attack]
-            name=axe
-        [/filter_attack]
-        start_time=-250
-        [frame]
-            image="units/human-outlaws/footpad.png:50"
-        [/frame]
-        [frame]
-            image="units/human-outlaws/footpad-melee-[1~4].png:100"
-        [/frame]
-        {SOUND:HIT_AND_MISS axe.ogg {SOUND_LIST:MISS} -125}
-    [/attack_anim]
-    [idle_anim]
-        {STANDARD_IDLE_FILTER}
-        start_time=0
-        [frame]
-            duration=100
-            image="units/human-outlaws/footpad-idle-[1~4,3,2,3,4~1].png:[100*3,200,100*3,200,100*3]"
-        [/frame]
-    [/idle_anim]
-    [female]
-        name=_"female^Footpad" + _" (ladder)"
-        gender=female
-        image="units/human-outlaws/footpad+female.png"
-        profile="portraits/humans/footpad+female.png"
-        die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
-        {DEFENSE_ANIM "units/human-outlaws/footpad+female-defend.png" "units/human-outlaws/footpad+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
-        [attack_anim]
-            [filter_attack]
-                name=sling
-            [/filter_attack]
-            [if]
-                {MISSILE_FRAME_STONE_HIT 5 -6}
-                [frame]
-                    image="units/human-outlaws/footpad+female-attack1.png:250"
-                [/frame]
-            [/if]
-            [else]
-                {MISSILE_FRAME_STONE_MISS 5 -6}
-                [frame]
-                    image="units/human-outlaws/footpad+female-attack1.png:250"
-                [/frame]
-            [/else]
-            [frame]
-                image="units/human-outlaws/footpad+female-attack2.png:200"
-            [/frame]
-        [/attack_anim]
-        [attack_anim]
-            [filter_attack]
-                name=axe
-            [/filter_attack]
-            [frame]
-                image="units/human-outlaws/footpad+female.png:50"
-            [/frame]
-            [frame]
-                image="units/human-outlaws/footpad+female-melee-[1~4].png:100"
-            [/frame]
-        [/attack_anim]
-        [idle_anim]
-            [frame]
-                image="units/human-outlaws/footpad+female-idle-[1~4,3,2,3,4~1].png:[100*3,200,100*3,200,100*3]"
             [/frame]
         [/idle_anim]
     [/female]
