--- a/units/merfolk/Entangler.cfg
+++ b/units/merfolk/Entangler.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Merman Entangler Ladder_0_1
+    id=Merman Entangler Ladder_1
     name=_"Merman Entangler" + _" (ladder)"
     [base_unit]
         id=Merman Entangler
