--- a/units/merfolk/Javelineer.cfg
+++ b/units/merfolk/Javelineer.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Merman Javelineer Ladder_0_1
+    id=Merman Javelineer Ladder_1
     name=_"Merman Javelineer" + _" (ladder)"
     [base_unit]
         id=Merman Javelineer
