--- a/units/orcs/Archer.cfg
+++ b/units/orcs/Archer.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Orcish Archer Ladder_0_1
+    id=Orcish Archer Ladder_1
     name=_"Orcish Archer" + _" (ladder)"
     [base_unit]
         id=Orcish Archer
