--- a/units/undead/Skeleton_Archer.cfg
+++ b/units/undead/Skeleton_Archer.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-units
 [unit_type]
-    id=Skeleton Archer Ladder_0_1
+    id=Skeleton Archer Ladder_1
     name= _ "Skeleton Archer" + _" (ladder)"
     [base_unit]
         id=Skeleton Archer
