Updated units for Wesnoth 1.16 and Ladder Era 1.0.0

--- a/factions/drakes.cfg
+++ b/factions/drakes.cfg
@@ -4,8 +4,8 @@
     name=_"Drakes"
     image="units/drakes/flare.png"
     type=random
-    leader=Drake Flare,Fire Drake,Drake Arbiter,Drake Thrasher,Drake Warrior Ladder_1
-    recruit=Drake Burner,Drake Clasher,Drake Glider,Drake Fighter Ladder_1,Saurian Skirmisher,Saurian Augur
+    leader=Drake Flare Ladder_1,Fire Drake Ladder_1,Drake Arbiter,Drake Thrasher,Drake Warrior Ladder_1
+    recruit=Drake Burner Ladder_1,Drake Clasher,Drake Glider,Drake Fighter Ladder_1,Saurian Skirmisher,Saurian Augur
     terrain_liked=Hh, Ha, Ds, Ss
     # wmllint: markcheck off
     description="<img>src='portraits/drakes/inferno.png~BG()' align='middle'</img>
