--- a/units/dwarves/Steelclad.cfg
+++ b/units/dwarves/Steelclad.cfg
@@ -7,7 +7,6 @@
     [/base_unit]
     advances_to=Dwarvish Lord Ladder_1
 
-    hitpoints=57
     num_traits=3
     ignore_race_traits=yes
     {LE_TRAIT_HARDY_MUSTHAVE}
@@ -16,7 +15,7 @@
     {TRAIT_INTELLIGENT}
     {TRAIT_RESILIENT}
 
-    description=_"Ladder variation of the Dwarvish Steelclad that has 57 hitpoints; has three traits in total, hardy trait is mandatory, healthy trait is removed.
+    description=_"Ladder variation of the Dwarvish Steelclad that has three traits in total, hardy trait is mandatory, healthy trait is removed.
 
 " + _"Outfitted in the strongest plate and mail of Knalgan forges, the Steelclads are the vanguard of dwarvish armies. They are renowned for their resilience in the heat of battle, and their mastery of both battleaxe and warhammer make them imposing foes indeed."
 [/unit_type]
