--- a/units/elves/Shaman.cfg
+++ b/units/elves/Shaman.cfg
@@ -12,7 +12,29 @@
     {TRAIT_INTELLIGENT}
     {TRAIT_RESILIENT}
 
-    description=_"Ladder variation of the Elvish Shaman that can't have the dextrous trait.
+    # Note: need to list all attacks for the proper work of base_unit merging
+    [attack]
+        name=staff
+        description=_"staff"
+        type=impact
+        damage=3
+        number=2
+        range=melee
+        icon=attacks/druidstaff.png
+    [/attack]
+    [attack]
+        name=entangle
+        description=_"entangle"
+        type=impact
+        [specials]
+            {WEAPON_SPECIAL_SLOW}
+        [/specials]
+        damage=3
+        number=2
+        range=ranged
+    [/attack]
+
+    description=_"Ladder variation of the Elvish Shaman that has 3-2 ranged attack instead of 4-2 and can't have the dextrous trait.
 
 " + _"Being partly faerie in nature, elves have an inherent capability for magic. This is realized in their affinity with the natural world, which they can call upon as an ally in combat. Enemies wandering in their forests may soon find themselves entangled by roots and hindered by the very ground they stand on.
 
