--- a/units/merfolk/Hunter.cfg
+++ b/units/merfolk/Hunter.cfg
@@ -12,7 +12,7 @@
       deep_water=40
     [/defense]
 
-    description= _ "Ladder variation of the Merman Hunter that has 2 more hitpoints and 60% defense in deep water instead of 50%.
+    description= _ "Ladder variation of the Merman Hunter that has 32 hitpoints instead of 33 and 60% defense in deep water instead of 50%.
 
 " + _"The skills employed by mermen in spear-fishing are easily translated into warfare, especially against those who are not at home in the water. In times of need, many mermen of that occupation will volunteer to swell the ranks of their military."
 [/unit_type]
