--- a/units/humans/Woodsman_Poacher.cfg
+++ b/units/humans/Woodsman_Poacher.cfg
@@ -6,14 +6,9 @@
         id=Poacher
     [/base_unit]
 
-    ignore_race_traits=yes
-    {TRAIT_STRONG}
-    {TRAIT_QUICK}
-    {TRAIT_INTELLIGENT}
-    {TRAIT_RESILIENT}
-    {TRAIT_DEXTROUS}
+    hitpoints=32
 
-    description=_"Ladder variation of the Poacher that can have the dextrous trait.
+    description=_"Ladder variation of the Poacher that has 32 hitpoints instead of 33.
 
 " + _"Though not trained as warriors, the skills possessed by a hunter (especially those of archery) are useful in battle. Any group of soldiers or bandits traveling through the wild will need a few poachers in their employ, not merely for hunting but for lending a hand in any serious fight.
 
