--- a/era.cfg
+++ b/era.cfg
@@ -42,7 +42,7 @@ multiplayer_Bath_of_Glory,multiplayer_Blue_Water_Province,multiplayer_Castle_Hop
     {QUICK_4MP_LEADERS}
     {LE_SLOW_6MP_LEADERS}
     {LE_TRAIT_HARDY_EVENT}
-    {LE_CHANGELOG_MENU_ITEM}
+    {LE_MENU_ITEMS}
 [/era]
 
 #undef LADDER_ERA_VERSION
