--- a/units/dwarves/Ulfserker.cfg
+++ b/units/dwarves/Ulfserker.cfg
@@ -16,7 +16,7 @@
     {TRAIT_INTELLIGENT}
     {TRAIT_RESILIENT}
 
-    description=_"Ladder variation of the Dwarvish Ulfserker that costs 20 gold; has three traits in total, hardy trait is mandatory, healthy trait is removed.
+    description=_"Ladder variation of the Dwarvish Ulfserker that costs 20 gold instead of 19; has three traits in total, hardy trait is mandatory, healthy trait is removed.
 
 " + _"Dwarves are an ancient race of powerful fighters. Ulfserkers are the most ferocious of these; in battle, they will work themselves into a blind rage wherein they feel neither fear nor pain, and will pay no heed to any wounds they receive."+{SPECIAL_NOTES}+{SPECIAL_NOTES_BERSERK}
 [/unit_type]
