--- a/units/humans/Loyalist_Cavalryman.cfg
+++ b/units/humans/Loyalist_Cavalryman.cfg
@@ -8,7 +8,7 @@
 
     cost=18
 
-    description=_"Ladder variation of the Cavalryman that costs 18 gold.
+    description=_"Ladder variation of the Cavalryman that costs 18 gold instead of 17.
 
 " + _"Cavalrymen are distinguished from horsemen by their tactics and equipment. A cavalryman wears heavier armor, and carries a sword and shield, rather than a lance. Their tactics do not include charging; instead they maneuver to slash with a sword, using both horse and rider as an effective tool of melee.
 
