--- a/units/undead/Skeleton_Archer.cfg
+++ b/units/undead/Skeleton_Archer.cfg
@@ -8,7 +8,7 @@
 
     cost=15
 
-    description=_"Ladder variation of the Skeleton Archer that costs 15 gold.
+    description=_"Ladder variation of the Skeleton Archer that costs 15 gold instead of 14.
 
 " + _"A skeleton archer is little different from the ‘skeletons’ which often accompany it — it is a sin against nature, a warrior raised from the dead to fight once again. In their masters’ hands, these soldiers will do anything to achieve the tasks laid before them, for death holds no fear for one who is already dead."+{SPECIAL_NOTES}+{SPECIAL_NOTES_SUBMERGE}
 [/unit_type]
