--- a/units/dwarves/Thunderer.cfg
+++ b/units/dwarves/Thunderer.cfg
@@ -16,7 +16,7 @@
     {TRAIT_INTELLIGENT}
     {TRAIT_RESILIENT}
 
-    description=_"Ladder variation of the Dwarvish Thunderer that costs 16 gold; has three traits in total, hardy trait is mandatory, healthy trait is removed.
+    description=_"Ladder variation of the Dwarvish Thunderer that costs 16 gold instead of 17; has three traits in total, hardy trait is mandatory, healthy trait is removed.
 
 " + _"When the men of Wesnoth first encountered the dwarves, they were mystified by the power of the Dwarvish Thunderers, who were able to hurl death from afar through the apparatus of these strange wands they carried into battle. The deafening noise of these ‘thundersticks’ is terrifying to behold, and is made more so by the secrecy which dwarves wrap about their workings."
 [/unit_type]
