--- a/era.cfg
+++ b/era.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-multiplayer
 
 #define LADDER_ERA_VERSION
-"1.0.0"#enddef
+"1.0.1"#enddef
 
 #define LADDER_ERA_MINIMUM_COMPATIBLE_VERSION
-"1.0.0"#enddef
+"1.0.1"#enddef
 
 #define LE_MAP_PICKER_IDS
 Ladder_All_Maps,Ladder_Classic_Maps,Ladder_Competitive_Maps,Ladder_Adventurous_Maps#enddef
@@ -37,6 +37,34 @@ multiplayer_Bath_of_Glory,multiplayer_Blue_Water_Province,multiplayer_Castle_Hop
     {~add-ons/Ladder_Era/factions/rebels.cfg}
     {~add-ons/Ladder_Era/factions/northerners.cfg}
     {~add-ons/Ladder_Era/factions/undead.cfg}
+
+    {TURNS_OVER_ADVANTAGE}
+    {QUICK_4MP_LEADERS}
+    {LE_SLOW_6MP_LEADERS}
+    {LE_TRAIT_HARDY_EVENT}
+    {LE_MENU_ITEMS}
+[/era]
+
+# Test era contains different unit versions in knalgans_test.cfg and undead_test.cfg
+[era]
+    id=ladder_test_era
+    name=_"Ladder Test Era"
+    {LE_PRINT_VERSION _"Ladder Test Era" {LADDER_ERA_VERSION}}
+
+    require_era=yes
+    addon_min_version={LADDER_ERA_MINIMUM_COMPATIBLE_VERSION}
+    description=_"Balanced version of the Default Era for competitive play. May be used only with approved maps. Needs play testing to verify the balance changes."
+
+    # Only approved maps can be played with this era
+    allow_scenario={LE_MAP_PICKER_IDS},{LE_1v1_DEFAULT_SCENARIO_IDS},{LE_1v1_MODIFIED_SCENARIO_IDS},{LE_2v2_SCENARIO_IDS}
+
+    {RANDOM_SIDE}
+    {~add-ons/Ladder_Era/factions/drakes.cfg}
+    {~add-ons/Ladder_Era/factions/knalgans_test.cfg}
+    {~add-ons/Ladder_Era/factions/loyalists.cfg}
+    {~add-ons/Ladder_Era/factions/rebels.cfg}
+    {~add-ons/Ladder_Era/factions/northerners.cfg}
+    {~add-ons/Ladder_Era/factions/undead_test.cfg}
 
     {TURNS_OVER_ADVANTAGE}
     {QUICK_4MP_LEADERS}
