--- a/units/dwarves/Fighter.cfg
+++ b/units/dwarves/Fighter.cfg
@@ -19,3 +19,43 @@
 
 " + _"Dwarvish Fighters wield mighty battle axes and hammers, which make them feared opponents in close-range combat. They are excellent in mountainous terrain or underground. Their power and endurance more than compensate for their relatively poor mobility."
 [/unit_type]
+
+[unit_type]
+    id=Dwarvish Fighter Ladder_2
+    name=_"Dwarvish Fighter" + _" (ladder)"
+    [base_unit]
+        id=Dwarvish Fighter
+    [/base_unit]
+    advances_to=Dwarvish Steelclad Ladder_1
+
+    num_traits=3
+    ignore_race_traits=yes
+    {LE_TRAIT_HARDY_MUSTHAVE}
+    {TRAIT_STRONG}
+    {TRAIT_QUICK}
+    {TRAIT_INTELLIGENT}
+    {TRAIT_RESILIENT}
+
+    # Note: need to list all attacks for the proper work of base_unit merging
+    [attack]
+        name=axe
+        description=_"axe"
+        type=blade
+        range=melee
+        damage=7
+        number=3
+    [/attack]
+    [attack]
+        name=hammer
+        description=_"hammer"
+        icon=attacks/hammer-dwarven.png
+        type=impact
+        range=melee
+        damage=9
+        number=2
+    [/attack]
+
+    description=_"Ladder variation of the Dwarvish Fighter that has 9-2 melee impact attack instead of 8-2; has three traits in total, hardy trait is mandatory, healthy trait is removed.
+
+" + _"Dwarvish Fighters wield mighty battle axes and hammers, which make them feared opponents in close-range combat. They are excellent in mountainous terrain or underground. Their power and endurance more than compensate for their relatively poor mobility."
+[/unit_type]
