--- a/units/dwarves/Lord.cfg
+++ b/units/dwarves/Lord.cfg
@@ -18,3 +18,25 @@
 
 " + _"Clad in shining armor, these dwarves look like kings from under the mountains. They wield axe and hammer with masterful skill, and can hit a target with a thrown hand axe at several paces. Though slow on their feet, these dwarves are a testament to the prowess of their kin."
 [/unit_type]
+
+[unit_type]
+    id=Dwarvish Lord Ladder_2
+    name=_"Dwarvish Lord" + _" (ladder)"
+    [base_unit]
+        id=Dwarvish Lord
+    [/base_unit]
+
+    hitpoints=72
+
+    num_traits=3
+    ignore_race_traits=yes
+    {LE_TRAIT_HARDY_MUSTHAVE}
+    {TRAIT_STRONG}
+    {TRAIT_QUICK}
+    {TRAIT_INTELLIGENT}
+    {TRAIT_RESILIENT}
+
+    description=_"Ladder variation of the Dwarvish Lord that has 72 hitpoints instead of 74; three traits in total, hardy trait is mandatory, healthy trait is removed.
+
+" + _"Clad in shining armor, these dwarves look like kings from under the mountains. They wield axe and hammer with masterful skill, and can hit a target with a thrown hand axe at several paces. Though slow on their feet, these dwarves are a testament to the prowess of their kin."
+[/unit_type]
