--- a/units/dwarves/Steelclad.cfg
+++ b/units/dwarves/Steelclad.cfg
@@ -19,3 +19,26 @@
 
 " + _"Outfitted in the strongest plate and mail of Knalgan forges, the Steelclads are the vanguard of dwarvish armies. They are renowned for their resilience in the heat of battle, and their mastery of both battleaxe and warhammer make them imposing foes indeed."
 [/unit_type]
+
+[unit_type]
+    id=Dwarvish Steelclad Ladder_2
+    name=_"Dwarvish Steelclad" + _" (ladder)"
+    [base_unit]
+        id=Dwarvish Steelclad
+    [/base_unit]
+    advances_to=Dwarvish Lord Ladder_2
+
+    hitpoints=55
+
+    num_traits=3
+    ignore_race_traits=yes
+    {LE_TRAIT_HARDY_MUSTHAVE}
+    {TRAIT_STRONG}
+    {TRAIT_QUICK}
+    {TRAIT_INTELLIGENT}
+    {TRAIT_RESILIENT}
+
+    description=_"Ladder variation of the Dwarvish Steelclad that has 55 hitpoints instead of 57; three traits in total, hardy trait is mandatory, healthy trait is removed.
+
+" + _"Outfitted in the strongest plate and mail of Knalgan forges, the Steelclads are the vanguard of dwarvish armies. They are renowned for their resilience in the heat of battle, and their mastery of both battleaxe and warhammer make them imposing foes indeed."
+[/unit_type]
