--- a/units/humans/Loyalist_Cavalryman.cfg
+++ b/units/humans/Loyalist_Cavalryman.cfg
@@ -7,10 +7,15 @@
     [/base_unit]
 
     cost=18
+    [resistance]
+        blade=70
+        impact=60
+        cold=80
+    [/resistance]
 
-    description=_"Ladder variation of the Cavalryman that costs 18 gold instead of 17.
+    description=_"Ladder variation of the Cavalryman that costs 18 gold instead of 17 and has 30% blade resistance instead of 20%.
 
 " + _"Cavalrymen are distinguished from horsemen by their tactics and equipment. A cavalryman wears heavier armor, and carries a sword and shield, rather than a lance. Their tactics do not include charging; instead they maneuver to slash with a sword, using both horse and rider as an effective tool of melee.
 
-Cavalrymen are very useful for taking and holding positions on open ground, for screening friendly soldiers, and also for scouting work."+{SPECIAL_NOTES}+{SPECIAL_NOTES_DEFENSE_CAP}
+Cavalrymen are very useful for taking and holding positions on open ground, for screening friendly soldiers, and also for scouting work."
 [/unit_type]
