--- a/factions/knalgans.cfg
+++ b/factions/knalgans.cfg
@@ -5,7 +5,7 @@
     image="units/dwarves/steelclad.png"
     type=random
     leader=Dwarvish Steelclad Ladder_1,Dwarvish Thunderguard Ladder_1,Dwarvish Stalwart Ladder_1
-    recruit=Dwarvish Guardsman Ladder_1,Dwarvish Fighter Ladder_1,Dwarvish Ulfserker Ladder_1,Dwarvish Thunderer Ladder_1,Thief,Poacher Ladder_1,Footpad Ladder_1,Gryphon Rider
+    recruit=Dwarvish Guardsman Ladder_1,Dwarvish Fighter Ladder_1,Dwarvish Ulfserker Ladder_1,Dwarvish Thunderer Ladder_1,Thief,Poacher Ladder_1,Footpad Ladder_1,Gryphon Rider Ladder_1
     terrain_liked=Hh, Ha, Mm
     # wmllint: markcheck off
     description="<img>src='portraits/dwarves/ulfserker.png~BG()' align='middle'</img>
